--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"prop-types": "15.7.2",
+		"immutable": "4.0.0-rc.12",
 		"react": "16.8.3",
 		"react-native": "0.59.8",
 		"react-redux": "^7.0.3",
